<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="isLoading" type="boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loading_cars"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading_cars"
            android:textAlignment="center"
            app:visibleGone="@{isLoading}"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:orientation="vertical"
            app:visibleGone="@{!isLoading}">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="@dimen/car_header1"
                android:text="@string/cars"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/car_list"
                android:contentDescription="@string/car_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:src="@drawable/ic_show_shop_cart"
                android:contentDescription="@string/shop_car_list"
                android:layout_margin="16dp"
                app:layout_anchor="@id/car_list"
                app:layout_anchorGravity="bottom|right|end"
                />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>
</layout>