...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_image"
            app:layout_constraintTop_toBottomOf="@+id/btn_mais_detalhes"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_colocar_carrinho"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/car_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_image"
            app:layout_constraintTop_toBottomOf="@+id/car_price"
...
